--- a/src/Presentation/SmartStore.Web/Views/PrivateMessages/Partials/SentItems.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/PrivateMessages/Partials/SentItems.cshtml
@@ -79,11 +79,13 @@
                 @Html.SmartStore().Pager(Model).Name("paginator").Route("PrivateMessages", ViewData["PagerRouteValues"])
             }
 
-            <div class="buttons">
-                <button class="btn btn-danger" name="delete-sent" type="submit" value="delete-sent">
-                    <i class="fa fa-trash-o"></i>
-                    <span>@T("PrivateMessages.Inbox.DeleteSelected")</span>
-                </button>
+            <div class="buttons row xs-gutters">
+                <div class="col col-lg-auto col-12 mt-2">
+                    <button class="btn btn-danger btn-block" name="delete-sent" type="submit" value="delete-sent">
+                        <i class="fa fa-trash-o"></i>
+                        <span>@T("PrivateMessages.Inbox.DeleteSelected")</span>
+                    </button>
+                </div>
             </div>
         }
     }
