--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/Partials/CartItems.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/Partials/CartItems.cshtml
@@ -20,8 +20,8 @@
 
                     @if (Model.DisplayShortDesc && !String.IsNullOrEmpty(item.ShortDesc))
                     {
-                        <div class="short-desc">
-                            @Html.Raw(item.ShortDesc)
+                        <div class="cart-item-desc text-smaller">
+                            @Html.Raw(item.ShortDesc.Truncate(180, "..."))
                         </div>
                     }
 
@@ -205,7 +205,7 @@
                                 </div>
                                 @if (Model.DisplayShortDesc && !String.IsNullOrWhiteSpace(item.ShortDesc))
                                 {
-                                    <div class="bundle-item-description short-desc text-smaller">
+                                    <div class="bundle-item-description cart-item-desc text-smaller">
                                         @Html.Raw(item.ShortDesc.Truncate(210, "..."))
                                     </div>
                                 }
