--- a/src/Presentation/SmartStore.Web/Views/Catalog/ManufacturerAll.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Catalog/ManufacturerAll.cshtml
@@ -1,5 +1,4 @@
-﻿@using SmartStore.Core;
-@using SmartStore.Core.Infrastructure;
+﻿@using SmartStore.Core.Infrastructure;
 @using SmartStore.Web.Models.Catalog;
 @using SmartStore.Core.Domain.Catalog;
 
