Corrected class name typo

--- a/src/Plugins/SmartStore.OfflinePayment/Views/OfflinePayment/ManualConfigure.cshtml
+++ b/src/Plugins/SmartStore.OfflinePayment/Views/OfflinePayment/ManualConfigure.cshtml
@@ -15,7 +15,7 @@
             </td>
             <td class="adminData">
 				@Html.SettingOverrideCheckbox(model => model.TransactMode)
-                @Html.DropDownListFor(model => model.TransactMode, Model.TransactModeValues, new { @class = "form-control no-skin" })
+                @Html.DropDownListFor(model => model.TransactMode, Model.TransactModeValues, new { @class = "form-control noskin" })
             </td>
         </tr>
 		<tr>
