--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/Partials/WishlistItems.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/Partials/WishlistItems.cshtml
@@ -27,7 +27,7 @@
 
                     @if (Model.DisplayShortDesc && !String.IsNullOrEmpty(item.ShortDesc))
                     {
-                        <div class="cart-item-desc text-smaller">
+                        <div class="cart-item-desc text-smaller text-muted">
                             @Html.Raw(item.ShortDesc.Truncate(180, "..."))
                         </div>
                     }
@@ -158,7 +158,7 @@
                                 </div>
                                 @if (Model.DisplayShortDesc && !String.IsNullOrWhiteSpace(item.ShortDesc))
                                 {
-                                    <div class="bundle-item-description cart-item-desc text-smaller">
+                                    <div class="bundle-item-description cart-item-desc text-smaller text-muted">
                                         @Html.Raw(item.ShortDesc.Truncate(210, "..."))
                                     </div>
                                 }
