--- a/src/Plugins/SmartStore.AmazonPay/Views/AmazonPayCheckout/ShippingAddress.cshtml
+++ b/src/Plugins/SmartStore.AmazonPay/Views/AmazonPayCheckout/ShippingAddress.cshtml
@@ -15,7 +15,7 @@
 
 <div class="page shipping-address-page">
     <div class="page-title">
-        <h1>@T("Checkout.ShippingAddress")</h1>
+        <h1 class="h3">@T("Checkout.ShippingAddress")</h1>
     </div>
 
     <div class="page-body checkout-data">
