--- a/src/Presentation/SmartStore.Web/Views/Checkout/Confirm.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Checkout/Confirm.cshtml
@@ -1,13 +1,15 @@
 ﻿@model CheckoutConfirmModel
-@using SmartStore.Web.Models.Checkout;
-@{
-    Layout = "_Checkout";
-    Html.AddTitleParts(T("PageTitle.Checkout").Text);
-    Html.AddBodyCssClass("no-offcanvas-cart");
 
-    string termsLink = "<a id='terms-of-service-trigger' class='read' data-toggle='modal' data-target='#terms-of-service-modal'>";
-    string disclaimerLink = "<a id='disclaimer-trigger' class='read' data-toggle='modal' data-target='#terms-of-service-modal'>";
-    string terms = string.Format(T("Checkout.TermsOfService.IAccept"), termsLink, "</a>", disclaimerLink);
+@using SmartStore.Web.Models.Checkout;
+
+@{
+	Layout = "_Checkout";
+	Html.AddTitleParts(T("PageTitle.Checkout").Text);
+	Html.AddBodyCssClass("no-offcanvas-cart");
+
+	string termsLink = "<a id='terms-of-service-trigger' class='read' data-toggle='modal' data-target='#terms-of-service-modal'>";
+	string disclaimerLink = "<a id='disclaimer-trigger' class='read' data-toggle='modal' data-target='#terms-of-service-modal'>";
+	string terms = string.Format(T("Checkout.TermsOfService.IAccept"), termsLink, "</a>", disclaimerLink);
 }
 
 @section orderProgress{
@@ -33,7 +35,7 @@
 
 			if (Model.TermsOfServiceEnabled)
 			{
-                <div class="terms-of-service alert alert-info">
+                <div class="terms-of-service alert alert-info mb-3">
                     <script type="text/javascript">
                         $(document).ready(function () {
                             $("#terms-of-service-trigger").on("click", function (event) {
@@ -70,18 +72,10 @@
                 </div>
 			}
 
-            <script type="text/javascript">
-                $(document).ready(function () {
-                    $('#confirm-order-form').submit(function () {
-                        $('input[type=submit]', this).attr('disabled', 'disabled');
-                    });
-                });
-            </script>
-
             <div class="confirm-order">
                 @if (Model.Warnings.Count > 0)
 				{
-					<div class="alert alert-danger">
+					<div class="alert alert-danger mb-3">
 						<ul>
 							@for (int i = 0; i < Model.Warnings.Count; i++)
 							{
@@ -101,110 +95,122 @@
 
         @if (Model.ShowConfirmOrderLegalHint) 
         { 
-            <div class="confirm-order-legal-hint alert alert-warning">
+            <div class="alert alert-warning confirm-order-legal-hint">
                 @T("OrderSummary.ConfirmOrderLegalHint")
             </div>
         }
 
-        <div class="confirm-order">
-            <div class="buttons">
-                @if (!String.IsNullOrEmpty(Model.MinOrderTotalWarning))
-                {
-                    @Model.MinOrderTotalWarning
-                }
-                else
-                {
-                    <script type="text/javascript">
-                        $(function () {
-                            var checkoutButton = $(".confirm-order-next-step-button");
-                            checkoutButton.on("click", function () {
-                                var termOfServiceOk = true,
-                            		userAgreementsOk = true,
-                            		esdRevocationWaiverOk = true;
+		@if (Model.MinOrderTotalWarning.HasValue())
+		{
+			<div class="alert alert-danger">
+				@Model.MinOrderTotalWarning
+			</div>
+		}
 
-                                var cartItems = $('#cart-items');
-
-                            	$("#customercommenthidden").val($("#CustomerComment").val());
-                            	$('#SubscribeToNewsLetterHidden').val($('input[name=SubscribeToNewsLetter]').is(':checked'));
-                            	$('#AcceptThirdPartyEmailHandOverHidden').val($('input[name=AcceptThirdPartyEmailHandOver]').is(':checked'));
-
-								// terms of services
-                                @if (Model.TermsOfServiceEnabled)
-                                {
-									<text>
-                                    if (!$('#termsofservice').is(':checked')) {
-                                        displayNotification('@T("Checkout.TermsOfService.PleaseAccept").ToString().EncodeJsString('"', false)', "error");
-                                        termOfServiceOk = false;
-                                        $.scrollTo($('#termsofservice'), 800, { offset: -70 });
-                                    }
-                                    else {
-                                        termOfServiceOk = true;
-                                    }
-									</text>
-                                }
-
-                            	// agree user agreement for downloadable products
-                                cartItems.find('input[name^=AgreeUserAgreement]').each(function () {
-                            		if (!$(this).is(':checked')) {
-                            			userAgreementsOk = false;
-                            			displayNotification('@T("Checkout.DownloadUserAgreement.PleaseAgree").ToString().EncodeJsString('"', false)', 'error');
-                            			if (termOfServiceOk) {
-                            			    $.scrollTo(cartItems, 800, { offset: -20 });
-                            			}
-                            			return false;
-                            		}
-                            	});
-
-                            	// agree esd revocation waiver
-								@if(Model.ShowEsdRevocationWaiverBox)
-								{
-									<text>
-                                    cartItems.find('input[name^=AgreeEsdRevocationWaiver]').each(function () {
-                            			if (!$(this).is(':checked')) {
-                            				esdRevocationWaiverOk = false;
-                            				displayNotification('@T("Checkout.EsdRevocationWaiverConfirmation.PleaseAgree").ToString().EncodeJsString('"', false)', 'error');
-                            				if (termOfServiceOk) {
-                            				    $.scrollTo(cartItems, 800, { offset: -20 });
-                            				}
-                            				return false;
-                            			}
-                            		});
-                            		</text>
-								}
-								
-                            	if (termOfServiceOk && userAgreementsOk && esdRevocationWaiverOk) {
-                            		var submitOrderEvent = jQuery.Event('submitOrder');
-                            		submitOrderEvent.isOrderValid = true;
-                            		submitOrderEvent.isMobile = false;
-
-                            		$(this).trigger(submitOrderEvent);
-
-                            		if (true === submitOrderEvent.isOrderValid) {
-                            			checkoutButton.attr("disabled", "disabled");
-                            		    checkoutButton.find(".fa-angle-right")
-											.removeClass("fa-angle-right")
-											.addClass("fa-spinner fa-spin");
-
-                            			$('#confirm-order-form').submit();
-                            		}
-                                }
-                            });
-                        });
-                    </script>
-                    
-                    <a class="btn btn-secondary btn-lg" href="@Url.Action("PaymentMethod")">
-                        <i class="fa fa-angle-left"></i>
-                        <span>@T("Common.Back")</span>
-                    </a>
-                    
-                    <button class="btn btn-danger btn-lg confirm-order-next-step-button" onclick="return false;" >
-                        <span>@T("Checkout.ConfirmButton")</span>
-                        <i class="fa fa-angle-right ml-5"></i> 
-                    </button>
-                }
-            </div>
+        <div class="cart-buttons my-4 row">
+			<div class="col-sm-6 col-lg-4 order-last order-sm-first mt-3 mt-sm-0">
+				<a class="btn btn-secondary btn-lg btn-block" href="@Url.Action("PaymentMethod")">
+					<i class="fa fa-angle-left mr-3"></i>
+					<span>@T("Common.Back")</span>
+				</a>
+			</div>
+			
+			@if (!Model.MinOrderTotalWarning.HasValue())
+            {
+				<div class="col-sm-6 col-lg-4 ml-lg-auto">
+					<button class="btn btn-danger btn-lg btn-block btn-buy" onclick="return false;">
+						<span>@T("Checkout.ConfirmButton")</span>
+						<i class="fa fa-angle-right ml-3"></i>
+					</button>
+				</div>
+            }
         </div>
 
 		@{ Html.RenderWidget("checkout_confirm_bottom"); }
     </div>
 </div>
+
+@if (!Model.MinOrderTotalWarning.HasValue())
+{
+	<script>
+        $(function () {
+        	$('#confirm-order-form').submit(function () {
+        		$('.btn-buy', this).attr('disabled', 'disabled');
+        	});
+
+        	var checkoutButton = $(".btn-buy");
+            checkoutButton.on("click", function () {
+                var termOfServiceOk = true,
+                    userAgreementsOk = true,
+                    esdRevocationWaiverOk = true;
+
+                var cartItems = $('#cart-items');
+
+                $("#customercommenthidden").val($("#CustomerComment").val());
+                $('#SubscribeToNewsLetterHidden').val($('input[name=SubscribeToNewsLetter]').is(':checked'));
+                $('#AcceptThirdPartyEmailHandOverHidden').val($('input[name=AcceptThirdPartyEmailHandOver]').is(':checked'));
+
+				// terms of services
+                @if (Model.TermsOfServiceEnabled)
+                {
+					<text>
+                    if (!$('#termsofservice').is(':checked')) {
+                        displayNotification('@T("Checkout.TermsOfService.PleaseAccept").ToString().EncodeJsString('"', false)', "error");
+                        termOfServiceOk = false;
+                        $.scrollTo($('#termsofservice'), 800, { offset: -70 });
+                    }
+                    else {
+                        termOfServiceOk = true;
+                    }
+					</text>
+                }
+
+                // agree user agreement for downloadable products
+                cartItems.find('input[name^=AgreeUserAgreement]').each(function () {
+                    if (!$(this).is(':checked')) {
+                        userAgreementsOk = false;
+                        displayNotification('@T("Checkout.DownloadUserAgreement.PleaseAgree").ToString().EncodeJsString('"', false)', 'error');
+                        if (termOfServiceOk) {
+                            $.scrollTo(cartItems, 800, { offset: -20 });
+                        }
+                        return false;
+                    }
+                });
+
+                // agree esd revocation waiver
+				@if(Model.ShowEsdRevocationWaiverBox)
+				{
+					<text>
+                    cartItems.find('input[name^=AgreeEsdRevocationWaiver]').each(function () {
+                        if (!$(this).is(':checked')) {
+                            esdRevocationWaiverOk = false;
+                            displayNotification('@T("Checkout.EsdRevocationWaiverConfirmation.PleaseAgree").ToString().EncodeJsString('"', false)', 'error');
+                            if (termOfServiceOk) {
+                            	$.scrollTo(cartItems, 800, { offset: -20 });
+                            }
+                            return false;
+                        }
+                    });
+                    </text>
+				}
+
+                if (termOfServiceOk && userAgreementsOk && esdRevocationWaiverOk) {
+                    var submitOrderEvent = jQuery.Event('submitOrder');
+                    submitOrderEvent.isOrderValid = true;
+                    submitOrderEvent.isMobile = false;
+
+                    $(this).trigger(submitOrderEvent);
+
+                    if (true === submitOrderEvent.isOrderValid) {
+                        checkoutButton.attr("disabled", "disabled");
+                        checkoutButton.find(".fa-angle-right")
+							.removeClass("fa-angle-right")
+							.addClass("fa-spinner fa-spin");
+
+                        $('#confirm-order-form').submit();
+                    }
+                }
+            });
+        });
+	</script>
+}
