--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/Partials/_OrderReviewData.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/Partials/_OrderReviewData.cshtml
@@ -1,200 +1,207 @@
 ﻿@model ShoppingCartModel.OrderReviewDataModel
+
 @using SmartStore.Web.Models.ShoppingCart;
-@if (Model.Display)
-{
-    <div class="order-review-data-box">
-        <div class="row">
-            <div class="billinginfo col-md-6 mb-3">
+
+@{ 
+	if (!Model.Display)
+	{
+		return;
+	}
+}
+
+<div class="order-review-data-box">
+    <div class="row">
+        <div class="billinginfo col-md-6 mb-3">
+            <div class="card">
+                <div class="card-header d-flex flex-nowrap justify-content-between">
+                    <h5 class="m-0">@T("Order.BillingAddress")</h5>
+                    <a class="change-checkout-data" href='@Url.Action("BillingAddress", "Checkout")'>@T("Common.Change")</a>
+                </div>
+                <div class="card-block">
+                    <div class="name">
+                        @Model.BillingAddress.FirstName @Model.BillingAddress.LastName
+                    </div>
+                    <div class="email">
+                        @T("Order.Email"): @Model.BillingAddress.Email
+                    </div>
+                    @if (Model.BillingAddress.PhoneEnabled)
+                    {
+                        <div class="phone">
+                            @T("Order.Phone"): @Model.BillingAddress.PhoneNumber
+                        </div>
+                    }
+                    @if (Model.BillingAddress.FaxEnabled)
+                    {
+                        <div class="fax">
+                            @T("Order.Fax"): @Model.BillingAddress.FaxNumber
+                        </div>
+                    }
+                    @if (Model.BillingAddress.CompanyEnabled && !String.IsNullOrEmpty(Model.BillingAddress.Company))
+                    {
+                        <div class="company">
+                            @Model.BillingAddress.Company
+                        </div>
+                    }
+                    @if (Model.BillingAddress.StreetAddressEnabled)
+                    {
+                        <div class="address1">
+                            @Model.BillingAddress.Address1
+                        </div>
+                    }
+                    @if (Model.BillingAddress.StreetAddress2Enabled && !String.IsNullOrEmpty(Model.BillingAddress.Address2))
+                    {
+                        <div class="address2">
+                            @Model.BillingAddress.Address2
+                        </div>
+                    }
+                    @if (Model.BillingAddress.CityEnabled ||
+                        Model.BillingAddress.StateProvinceEnabled ||
+                        Model.BillingAddress.ZipPostalCodeEnabled)
+                    {
+                        <div class="city-state-zip">
+                            @if (Model.BillingAddress.CityEnabled)
+                            {
+                                @Model.BillingAddress.City
+                            }
+                            @if (Model.BillingAddress.CityEnabled && (Model.BillingAddress.StateProvinceEnabled || Model.BillingAddress.ZipPostalCodeEnabled))
+                            {
+                                <text>,</text>
+                            }
+                            @if (Model.BillingAddress.StateProvinceEnabled)
+                            {
+                                @Model.BillingAddress.StateProvinceName
+                            }
+                            @if (Model.BillingAddress.ZipPostalCodeEnabled)
+                            {
+                                @Model.BillingAddress.ZipPostalCode
+                            }
+                        </div>
+                    }
+                    @if (Model.BillingAddress.CountryEnabled && !String.IsNullOrEmpty(Model.BillingAddress.CountryName))
+                    {
+                        <div class="country">
+                            @Model.BillingAddress.CountryName
+                        </div>
+                    }
+                    </div>
+            </div>
+        </div>
+
+        @if (Model.IsShippable)
+        {
+            <div class="shippinginfo col-md-6 mb-3">
                 <div class="card">
                     <div class="card-header d-flex flex-nowrap justify-content-between">
-                        <h5 class="m-0">@T("Order.BillingAddress")</h5>
-                        <a class="change-checkout-data" href='@Url.Action("BillingAddress", "Checkout")'>@T("Common.Change")</a>
+                        <h5 class="m-0">@T("Order.ShippingAddress")</h5>
+                        <a class="change-checkout-data" href='@Url.Action("ShippingAddress", "Checkout")'>@T("Common.Change")</a>
                     </div>
                     <div class="card-block">
                         <div class="name">
-                            @Model.BillingAddress.FirstName @Model.BillingAddress.LastName
+                            @Model.ShippingAddress.FirstName @Model.ShippingAddress.LastName
                         </div>
                         <div class="email">
-                            @T("Order.Email"): @Model.BillingAddress.Email
+                            @T("Order.Email"): @Model.ShippingAddress.Email
                         </div>
-                        @if (Model.BillingAddress.PhoneEnabled)
+                        @if (Model.ShippingAddress.PhoneEnabled)
                         {
                             <div class="phone">
-                                @T("Order.Phone"): @Model.BillingAddress.PhoneNumber
+                                @T("Order.Phone"): @Model.ShippingAddress.PhoneNumber
                             </div>
                         }
-                        @if (Model.BillingAddress.FaxEnabled)
+                        @if (Model.ShippingAddress.FaxEnabled)
                         {
                             <div class="fax">
-                                @T("Order.Fax"): @Model.BillingAddress.FaxNumber
+                                @T("Order.Fax"): @Model.ShippingAddress.FaxNumber
                             </div>
                         }
-                        @if (Model.BillingAddress.CompanyEnabled && !String.IsNullOrEmpty(Model.BillingAddress.Company))
+                        @if (Model.ShippingAddress.CompanyEnabled && !String.IsNullOrEmpty(Model.ShippingAddress.Company))
                         {
                             <div class="company">
-                                @Model.BillingAddress.Company
+                                @Model.ShippingAddress.Company
                             </div>
                         }
-                        @if (Model.BillingAddress.StreetAddressEnabled)
+                        @if (Model.ShippingAddress.StreetAddressEnabled)
                         {
                             <div class="address1">
-                                @Model.BillingAddress.Address1
+                                @Model.ShippingAddress.Address1
                             </div>
                         }
-                        @if (Model.BillingAddress.StreetAddress2Enabled && !String.IsNullOrEmpty(Model.BillingAddress.Address2))
+                        @if (Model.ShippingAddress.StreetAddress2Enabled && !String.IsNullOrEmpty(Model.ShippingAddress.Address2))
                         {
                             <div class="address2">
-                                @Model.BillingAddress.Address2
+                                @Model.ShippingAddress.Address2
                             </div>
                         }
-                        @if (Model.BillingAddress.CityEnabled ||
-                            Model.BillingAddress.StateProvinceEnabled ||
-                            Model.BillingAddress.ZipPostalCodeEnabled)
+                        @if (Model.ShippingAddress.CityEnabled ||
+                        Model.ShippingAddress.StateProvinceEnabled ||
+                        Model.ShippingAddress.ZipPostalCodeEnabled)
                         {
                             <div class="city-state-zip">
-                                @if (Model.BillingAddress.CityEnabled)
+                                @if (Model.ShippingAddress.CityEnabled)
                                 {
-                                    @Model.BillingAddress.City
+                                    @Model.ShippingAddress.City
                                 }
-                                @if (Model.BillingAddress.CityEnabled && (Model.BillingAddress.StateProvinceEnabled || Model.BillingAddress.ZipPostalCodeEnabled))
+                                @if (Model.ShippingAddress.CityEnabled && (Model.ShippingAddress.StateProvinceEnabled || Model.ShippingAddress.ZipPostalCodeEnabled))
                                 {
                                     <text>,</text>
                                 }
-                                @if (Model.BillingAddress.StateProvinceEnabled)
+                                @if (Model.ShippingAddress.StateProvinceEnabled)
                                 {
-                                    @Model.BillingAddress.StateProvinceName
+                                    @Model.ShippingAddress.StateProvinceName
                                 }
-                                @if (Model.BillingAddress.ZipPostalCodeEnabled)
+                                @if (Model.ShippingAddress.ZipPostalCodeEnabled)
                                 {
-                                    @Model.BillingAddress.ZipPostalCode
+                                    @Model.ShippingAddress.ZipPostalCode
                                 }
                             </div>
                         }
-                        @if (Model.BillingAddress.CountryEnabled && !String.IsNullOrEmpty(Model.BillingAddress.CountryName))
+                        @if (Model.ShippingAddress.CountryEnabled && !String.IsNullOrEmpty(Model.ShippingAddress.CountryName))
                         {
                             <div class="country">
-                                @Model.BillingAddress.CountryName
+                                @Model.ShippingAddress.CountryName
                             </div>
                         }
-                        </div>
-                </div>
-            </div>
-            @if (Model.IsShippable)
-            {
-                <div class="shippinginfo col-md-6 mb-3">
-                    <div class="card">
-                        <div class="card-header d-flex flex-nowrap justify-content-between">
-                            <h5 class="m-0">@T("Order.ShippingAddress")</h5>
-                            <a class="change-checkout-data" href='@Url.Action("ShippingAddress", "Checkout")'>@T("Common.Change")</a>
-                        </div>
-                        <div class="card-block">
-                            <div class="name">
-                                @Model.ShippingAddress.FirstName @Model.ShippingAddress.LastName
-                            </div>
-                            <div class="email">
-                                @T("Order.Email"): @Model.ShippingAddress.Email
-                            </div>
-                            @if (Model.ShippingAddress.PhoneEnabled)
-                            {
-                                <div class="phone">
-                                    @T("Order.Phone"): @Model.ShippingAddress.PhoneNumber
-                                </div>
-                            }
-                            @if (Model.ShippingAddress.FaxEnabled)
-                            {
-                                <div class="fax">
-                                    @T("Order.Fax"): @Model.ShippingAddress.FaxNumber
-                                </div>
-                            }
-                            @if (Model.ShippingAddress.CompanyEnabled && !String.IsNullOrEmpty(Model.ShippingAddress.Company))
-                            {
-                                <div class="company">
-                                    @Model.ShippingAddress.Company
-                                </div>
-                            }
-                            @if (Model.ShippingAddress.StreetAddressEnabled)
-                            {
-                                <div class="address1">
-                                    @Model.ShippingAddress.Address1
-                                </div>
-                            }
-                            @if (Model.ShippingAddress.StreetAddress2Enabled && !String.IsNullOrEmpty(Model.ShippingAddress.Address2))
-                            {
-                                <div class="address2">
-                                    @Model.ShippingAddress.Address2
-                                </div>
-                            }
-                            @if (Model.ShippingAddress.CityEnabled ||
-                            Model.ShippingAddress.StateProvinceEnabled ||
-                            Model.ShippingAddress.ZipPostalCodeEnabled)
-                            {
-                                <div class="city-state-zip">
-                                    @if (Model.ShippingAddress.CityEnabled)
-                                    {
-                                        @Model.ShippingAddress.City
-                                    }
-                                    @if (Model.ShippingAddress.CityEnabled && (Model.ShippingAddress.StateProvinceEnabled || Model.ShippingAddress.ZipPostalCodeEnabled))
-                                    {
-                                        <text>,</text>
-                                    }
-                                    @if (Model.ShippingAddress.StateProvinceEnabled)
-                                    {
-                                        @Model.ShippingAddress.StateProvinceName
-                                    }
-                                    @if (Model.ShippingAddress.ZipPostalCodeEnabled)
-                                    {
-                                        @Model.ShippingAddress.ZipPostalCode
-                                    }
-                                </div>
-                            }
-                            @if (Model.ShippingAddress.CountryEnabled && !String.IsNullOrEmpty(Model.ShippingAddress.CountryName))
-                            {
-                                <div class="country">
-                                    @Model.ShippingAddress.CountryName
-                                </div>
-                            }
-                        </div>
-                    </div>
-                </div>
-            }
-
-        </div>
-
-        @if (!String.IsNullOrEmpty(Model.PaymentMethod))
-        {
-            <div class="payment-method mb-3">
-                <div class="card">
-                    <div class="card-header d-flex flex-nowrap justify-content-between">
-                        <h5 class="m-0">@T("Order.PaymentMethod")</h5>
-						@if (!Model.IsPaymentSelectionSkipped)
-						{
-							<a class="change-checkout-data" href='@Url.Action("PaymentMethod", "Checkout")'>@T("Common.Change")</a>
-						}
-                    </div>
-                    <div class="card-block">
-                        @Model.PaymentMethod
-						@if (Model.PaymentSummary.HasValue())
-						{
-							<span class="text-muted">@Model.PaymentSummary</span>
-						}
                     </div>
                 </div>
             </div>
         }
 
-        @if (!String.IsNullOrEmpty(Model.ShippingMethod))
-        {
-            <div class="shipping-method mb-3">
-                <div class="card">
-                    <div class="card-header d-flex flex-nowrap justify-content-between">
-                        <h5 class="m-0">@T("Order.ShippingMethod")</h5>
-						<a class="change-checkout-data" href='@Url.Action("ShippingMethod", "Checkout")'>@T("Common.Change")</a>
-                    </div>
-                    <div class="card-block">
-                        @Model.ShippingMethod
-                    </div>
-                </div>
-            </div>
-        }
     </div>
-}
+
+    @if (Model.PaymentMethod.HasValue())
+    {
+        <div class="payment-method mb-3">
+            <div class="card">
+                <div class="card-header d-flex flex-nowrap justify-content-between">
+                    <h5 class="m-0">@T("Order.PaymentMethod")</h5>
+					@if (!Model.IsPaymentSelectionSkipped)
+					{
+						<a class="change-checkout-data" href='@Url.Action("PaymentMethod", "Checkout")'>@T("Common.Change")</a>
+					}
+                </div>
+                <div class="card-block">
+                    @Model.PaymentMethod
+					@if (Model.PaymentSummary.HasValue())
+					{
+						<span class="text-muted">@Model.PaymentSummary</span>
+					}
+                </div>
+            </div>
+        </div>
+    }
+
+    @if (Model.ShippingMethod.HasValue())
+    {
+        <div class="shipping-method mb-3">
+            <div class="card">
+                <div class="card-header d-flex flex-nowrap justify-content-between">
+                    <h5 class="m-0">@T("Order.ShippingMethod")</h5>
+					<a class="change-checkout-data" href='@Url.Action("ShippingMethod", "Checkout")'>@T("Common.Change")</a>
+                </div>
+                <div class="card-block">
+                    @Model.ShippingMethod
+                </div>
+            </div>
+        </div>
+    }
+</div>
