Theming: checkout confirm (final)

--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_checkout.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_checkout.scss
@@ -295,8 +295,7 @@ $costep-active-label-color:     $costep-label-color;
 }
 
 .checkout-data .change-checkout-data {
-	font-weight: normal;
-	text-transform: none;
+    padding: 0.25rem 0.5rem;
 }
 
 
