Theming: checkout selling

--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/shared/_utils.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/shared/_utils.scss
@@ -76,6 +76,10 @@ code {
     font-weight: 400;
 }
 
+.card-block > *:last-child {
+    margin-bottom: 0 !important;
+}
+
 
 // Dropdowns
 // ==============================================================
