--- a/src/Presentation/SmartStore.Web/Views/Checkout/Completed.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Checkout/Completed.cshtml
@@ -22,7 +22,7 @@
     <div class="page-body checkout-data pt-4">
         <div class="order-completed">
             @{ Html.RenderWidget("checkout_completed_top"); }
-            <div class="body">
+            <div class="body fs-h5">
                 <p>
                     @T("Checkout.OrderNumber"): &nbsp;
 					<a href="@Url.Action("Details", "Order", new { id = Model.OrderId })" rel="nofollow"><strong>@Model.OrderNumber</strong></a>
